Overlapping task offsetting and bug fixes.
* Add overlapping task offsetting with utility function and a new
  un-persisted task property "offset".

* Remove separate "duration" in task element scope and just use
  "task.duration".

* Fix bug with task font not resizing.

* Fix bug with displayed duration not updating on resize by using a
  separate "$scope.durStr" string variable that gets updated on
  "task.duration" changes.

* Fix bug where google calendar selection not being loaded on log in.

* Add a few pixels of padding to ".timeline" element so that tasks can
  be dragged from backlog to bottom edge of timeline.

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -11,6 +11,7 @@ $list-padding: 15px;
 $panel-width: 440px;
 $color-now: #DB4A47;
 $color-text-err: #A94442;
+$label-width: 60px;
 
 // Undo bootstrap styling //
 
@@ -39,11 +40,13 @@ a:hover { text-decoration: none; }
 
 .timeline {
   position: relative;
+  width: 1200px;
+  padding-bottom: 5px;
 }
 
 .time-label {
   float: left;
-  width: 60px;
+  width: $label-width;
   border-right: 1px solid gray;
   vertical-align: text-top;
 }
